--- a/Data/Data/Data.csproj
+++ b/Data/Data/Data.csproj
@@ -55,5 +55,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data.Models\Data.Models.csproj">
+      <Project>{C5D3E220-D9C8-4755-8690-8929AB05FC11}</Project>
+      <Name>Data.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
