--- a/Services/Services.FileReaderServices/NobelPrizeWinnerServices.csproj
+++ b/Services/Services.FileReaderServices/NobelPrizeWinnerServices.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2FB5340C-2102-4629-B984-1526FA682340}</ProjectGuid>
+    <ProjectGuid>{BCF9D137-87E9-4B93-AA80-BA333E710285}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Data.Common</RootNamespace>
-    <AssemblyName>Data.Common</AssemblyName>
+    <RootNamespace>Services.FileReaderServices</RootNamespace>
+    <AssemblyName>Services.FileReaderServices</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,6 +36,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus, Version=4.1.1.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EPPlus.4.1.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -47,21 +50,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\INobelPrizeWinnersDbRepository.cs" />
-    <Compile Include="Contracts\IUnitOfWork.cs" />
-    <Compile Include="NobelPrizeWinnersDbRepository.cs" />
+    <Compile Include="FileReader.cs" />
+    <Compile Include="Contracts\INobelPrizeWinnerService.cs" />
+    <Compile Include="Contracts\IFileReader.cs" />
+    <Compile Include="NobelPrizeWinnerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitOfWork.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\Data.Common\Data.Common.csproj">
+      <Project>{2FB5340C-2102-4629-B984-1526FA682340}</Project>
+      <Name>Data.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Data\Data.Models\Data.Models.csproj">
+      <Project>{C5D3E220-D9C8-4755-8690-8929AB05FC11}</Project>
+      <Name>Data.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj">
-      <Project>{f01d0a0a-97e3-4360-9bfb-48c062b63d7d}</Project>
-      <Name>Data</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
