--- a/Services/Services.FileReaderServices/NobelPrizeWinnerServices.csproj
+++ b/Services/Services.FileReaderServices/NobelPrizeWinnerServices.csproj
@@ -39,6 +39,9 @@
     <Reference Include="EPPlus, Version=4.1.1.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\..\packages\EPPlus.4.1.1\lib\net40\EPPlus.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -50,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileReader.cs" />
+    <Compile Include="FileDataConverter.cs" />
     <Compile Include="Contracts\INobelPrizeWinnerService.cs" />
     <Compile Include="Contracts\IFileReader.cs" />
     <Compile Include="NobelPrizeWinnerService.cs" />
