--- a/Data/Data.Models/Data.Models.csproj
+++ b/Data/Data.Models/Data.Models.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\Category.cs" />
+    <Compile Include="IIdentifiable.cs" />
     <Compile Include="NobelPrizeWinner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
