--- a/Console/ConsoleApp/ConsoleApp.csproj
+++ b/Console/ConsoleApp/ConsoleApp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\Nobel Prize Winners.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Data.Common\Data.Common.csproj">
